data/derived/comb/progs/unify/prog2611.ml.out
Characters 120-132:
  (sum / 10), x :: (sum mod 10) :: a
                   ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int * int
